deploy/retrieveUnpackaged/objects/NPS_Role__c.object
<CustomObject>
    <fields>
        <fullName>Account_Num__c</fullName>
        <formula>Account__r.CORE_Account_number__c</formula>
        <label>Account Num</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NPS Roles</relationshipLabel>
        <relationshipName>NPS_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <label>Contact ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N50000001od5ZEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>Contact_ID__r.FirstName &amp; &quot; &quot; &amp;  Contact_ID__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Role__c</fullName>
        <label>NPS Role</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>NPS Role</label>
    <nameField>
        <label>NPS Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NPS Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>